--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -846,6 +846,10 @@ label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .ArtworkInfo-preview {
@@ -889,9 +893,6 @@ label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
   max-height: 90px;
   overflow-x: auto;
   overflow-y: hidden;
