--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1705,6 +1705,21 @@ h5 {
   cursor: pointer;
 }
 
+.draggable-source--is-dragging {
+  background-color: lime !important;
+}
+
+.draggable-source--is-dragging * {
+  opacity: 0;
+}
+
+.draggable-mirror {
+  opacity: 0.8;
+  background-color: white !important;
+  position: absolute;
+  z-index: 9999;
+}
+
 @media only screen and (max-width: 720px) {
   .admin-container {
     -ms-grid-rows: [navigation] min-content [content] 1fr;
