--- a/client/src/css/components/_navigationInfo.scss
+++ b/client/src/css/components/_navigationInfo.scss
@@ -39,8 +39,8 @@
 //subcategory LABEL
 .list--subcategory > div{
     border: 1px solid rgba(0,0,0,.2);
-    height: 40px;
-    display: flex;
+    // height: 40px;
+    // display: flex;
     align-items: center;
     padding-left: 10px;
     background-color: rgb(179, 179, 179);
