--- a/client/src/css/components/_List.scss
+++ b/client/src/css/components/_List.scss
@@ -34,12 +34,14 @@ $filtersWidth_desktop: 220px;
 .legacyStyle-List-listItem{
     user-select: none;
     display: flex;
-    align-items: center;
+    align-items: baseline;
     padding: 0 3px;
     label{
         cursor: pointer;
+        order: 2;
     }
     input{
+        order: 1;
         cursor: pointer;
         margin: 0 4px;
     }
