--- a/client/src/css/components/_navigationInfo.scss
+++ b/client/src/css/components/_navigationInfo.scss
@@ -78,7 +78,7 @@
     border: 1px solid black;
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex-end;
 }
 .navigation--addNew_title{
     margin: 0 0 12px 20px !important;
