--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -599,7 +599,7 @@ h5{
     width: 100%;
     height: 100%;
     justify-content: center;
-    align-items: start;
+    // align-items: start;
     padding-top: 7%;
 }
 .Login-form{
@@ -607,6 +607,13 @@ h5{
     flex-wrap: 'wrap';
     flex-direction: column;
     width: '300px';
+    input{
+        border: 1px solid black;
+        border-radius: 6px;
+    }
+    button{
+        margin-top: 10px !important;
+    }
 }
 .Login-input{
     padding-left: 5px;
