--- a/client/src/css/components/_List.scss
+++ b/client/src/css/components/_List.scss
@@ -25,7 +25,7 @@ $filtersWidth_desktop: 220px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 14px;
     background-color: white;
-    border-right: 1px solid black;
+    // border-right: 1px solid black;
     width: 0;
     padding-top: 10px;
 }
@@ -121,7 +121,7 @@ $filtersWidth_desktop: 220px;
     .FilterTree-container{
         padding-top: 0;
         font-size: 16px;
-        border-right: 1px solid black;
+        // border-right: 1px solid black;
     }
     .FilterTree-wrapper{
         padding: 6px;
