--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -446,8 +446,6 @@ label {
           align-items: center;
   z-index: 2;
   overflow: hidden;
-  position: -webkit-sticky;
-  position: sticky;
   top: 0;
   text-indent: -100%;
   overflow: hidden;
@@ -461,8 +459,6 @@ label {
 
 .FilePreview--imageContainer__empty {
   overflow: hidden;
-  position: -webkit-sticky;
-  position: sticky;
   top: 0;
   z-index: -9999;
   height: 0;
@@ -1320,6 +1316,38 @@ label {
 
 .explorer-view {
   width: 120px !important;
+}
+
+.carousel-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: black;
+}
+
+.carousel-wrapper * {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+}
+
+.carousel-wrapper .carousel-indicators {
+  margin: 0 !important;
+}
+
+.carousel-wrapper a {
+  z-index: 9999;
+}
+
+.carousel-wrapper .carousel-indicators {
+  height: initial !important;
 }
 
 @media only screen and (max-width: 720px) {
