--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -321,7 +321,7 @@ font-family: 'Times New Roman', Times, serif;
     align-items: center;
     z-index: 2;
     overflow: hidden;
-    position: sticky;
+    // position: sticky;
     top: 0;
     text-indent: -100%;
     overflow: hidden;
@@ -332,7 +332,7 @@ font-family: 'Times New Roman', Times, serif;
 }
 .FilePreview--imageContainer__empty{
     overflow: hidden;
-    position: sticky;
+    // position: sticky;
     top: 0;
     z-index: -9999;
     height: 0;
@@ -950,6 +950,27 @@ font-family: 'Times New Roman', Times, serif;
 .explorer-view{
     // right: 0;
     width: 120px !important;
+}
+.carousel-wrapper{
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    justify-content: center;
+    background-color: black;
+    *{
+        width: 100%;
+        height: 100%;
+        max-width: 100%;
+    }
+    .carousel-indicators{
+        margin: 0 !important;
+    }
+    a{
+        z-index: 9999;
+    }
+    .carousel-indicators{
+        height: initial !important;
+    }
 }
 //MEDIA QUERY MOBILE *************************************************************************************************************
 @media only screen and (max-width: 720px) {
