--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -1333,9 +1333,12 @@ label {
 }
 
 .carousel-wrapper * {
-  width: 100%;
   height: 100%;
   max-width: 100%;
+}
+
+.carousel-wrapper .carousel {
+  width: 100%;
 }
 
 .carousel-wrapper .carousel-indicators {
@@ -1348,6 +1351,10 @@ label {
 
 .carousel-wrapper .carousel-indicators {
   height: initial !important;
+}
+
+.carousel-wrapper .carousel-control-next span, .carousel-wrapper carousel-control-prev span {
+  height: 20px;
 }
 
 @media only screen and (max-width: 720px) {
