--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -974,7 +974,7 @@ font-family: 'Times New Roman', Times, serif;
     .carousel-indicators{
         height: initial !important;
     }
-    .carousel-control-next span, carousel-control-prev span{
+    .carousel-control-next span, .carousel-control-prev span{
         height: 20px;
     }
 }
