keen slider + reactimagemagnify

--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -903,7 +903,7 @@ label {
 }
 
 .ArtworkInfo--descriptions {
-  margin: 1vw 0;
+  margin: 10px 0;
   font-size: 14px;
   max-width: 600px;
   margin-left: 50px;
@@ -1360,11 +1360,38 @@ label {
 
 .foreground-transition {
   height: 100%;
+  width: 100%;
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.foreground-transition div {
+  height: 100% !important;
+  width: 100% !important;
+}
+
+.foreground-transition img {
+  height: 100% !important;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .keen-slider__slide {
   min-width: 100%;
   max-width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr min-content;
+      grid-template-rows: 1fr -webkit-min-content;
+      grid-template-rows: 1fr min-content;
 }
 
 .dots {
@@ -1942,8 +1969,7 @@ label {
 
 .viewControls-button span {
   white-space: nowrap;
-  font-family: sans-serif;
-  text-transform: initial;
+  font-weight: bold;
 }
 
 .viewControls-button-disabled {
