--- a/client/src/css/components/_enlarge.scss
+++ b/client/src/css/components/_enlarge.scss
@@ -75,8 +75,9 @@
     height: 100%;
     span{
         white-space: nowrap;
-        font-family: sans-serif;
-        text-transform: initial;
+        // font-family: sans-serif;
+        // text-transform: initial;
+        font-weight: bold;
     }
 }
 .viewControls-button-disabled{
