--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -649,7 +649,8 @@ font-family: 'Times New Roman', Times, serif;
     font-size: 14px;
 }
 .ArtworkInfo--descriptions{
-    margin: 1vw 0;
+    // margin: 1vw 0;
+    margin: 10px 0;
     font-size: 14px;    
     max-width: 600px;
     margin-left: 50px;
@@ -981,11 +982,27 @@ font-family: 'Times New Roman', Times, serif;
 }
 .foreground-transition{
     height: 100%;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    div{
+        height: 100% !important;
+        width: 100% !important;
+    }
+    img{
+        height: 100% !important;
+        object-fit: contain;
+    }
 }
 .keen-slider__slide{
     min-width: 100%;
     max-width: 100%;
+    display: grid;
+    grid-template-rows: 1fr min-content;
 }
+
 .dots{
     position: absolute;
     bottom: 0;
