--- a/client/src/css/components/_enlarge.scss
+++ b/client/src/css/components/_enlarge.scss
@@ -14,6 +14,7 @@
     overflow: hidden;
     z-index: 99;
     transition: transform 0.3s;
+    border-left: 1px solid black;
 }
 .enlarge-bar{
     border-bottom: 1px solid black;
@@ -32,6 +33,7 @@
     right: 0;
 }
 .enlarge-closeButton-button{
+    user-select: none;
     height: 100%;
     text-transform: uppercase;
     font-weight: bold;
