--- a/client/src/css/components/_enlarge.scss
+++ b/client/src/css/components/_enlarge.scss
@@ -127,9 +127,9 @@
     //     right: unset;
     //     left: 10px;
     // }
-    .viewControls{
-        justify-content: space-between;
-    }
+    // .viewControls{
+    //     justify-content: space-between;
+    // }
     .viewControls-viewNext-container{
         order: 1;
     }
