--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -1412,6 +1412,7 @@ font-family: 'Times New Roman', Times, serif;
   @import './components/List';
   @import './components/viewhide';
   @import './components/switch';
+  @import './components/magnify';
 
 
   $navHeight_desktop: 20px;
