--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -2436,6 +2436,15 @@ input:checked + .slider:before {
   padding: 3px;
 }
 
+.img-magnifier-glass {
+  position: absolute;
+  border: 3px solid #000;
+  cursor: none;
+  /*Set the size of the magnifier glass:*/
+  width: 100px;
+  height: 100px;
+}
+
 .enlargeContainer {
   overflow: visible;
   display: -ms-grid;
